# ResQTerra-Engine

./: .gitignore  Cargo.toml  README.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROPOSAL.md  PROTOCOL.md
relay-node/: Cargo.toml
relay-node/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/command/: dispatcher.rs  mod.rs  timeout.rs
server/src/session/: connection.rs  manager.rs  mod.rs
shared/: Cargo.toml  build.rs
shared/proto/: resqterra.proto
shared/src/: codec.rs  lib.rs  state_machine.rs
src/: main.rs  protocol.rs
src/command/: executor.rs  mod.rs
src/command/handlers/: config.rs  emergency.rs  mission.rs  mod.rs  rth.rs  status.rs
src/connection/: manager.rs  mod.rs
src/mavlink/: commands.rs  connection.rs  mod.rs  telemetry.rs
src/safety/: mod.rs  monitor.rs
src/transport/: bluetooth.rs  bt_discovery.rs  five_g.rs  mod.rs  rfcomm.rs  tcp.rs  traits.rs
