[workspace]
members = [
    ".",
    "shared",
    "relay-node",
    "server",
]
resolver = "2"

[package]
name = "edge-device"
version = "0.1.0"
edition = "2021"

[dependencies]
resqterra-shared = { path = "shared" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytes = "1"
mavlink = { version = "0.14", features = ["ardupilotmega", "tokio-1"] }
tokio-serial = "5.4"
bluer = { version = "0.17", features = ["rfcomm", "bluetoothd"] }
async-trait = "0.1"
futures = "0.3"

